--- a/cart.css
+++ b/cart.css
@@ -94,7 +94,7 @@ a:hover {
     top: 60px;
     height: 0;
     width: 300px;
-    background-color: rgba(25, 25, 25, 0.5);
+    background-color: rgba(20, 20, 20,0.5);
     text-align: center;
     border-radius: 10px;
     overflow: hidden;
